fix: 聊天记录bug